force-app/main/default/objects/ABHI_Case_Detail__c/fields/IGMS_Comments__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Comments__c</fullName>
    <label>IGMS Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>