force-app/main/default/objects/ABHI_Case_Detail__c/fields/IGMS_Complaint_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Complaint_Receipt_Date__c</fullName>
    <description>This field is used to store the Complaint Receipt Date coming from IGMS Inbound Integration while case creation</description>
    <label>IGMS Complaint Receipt Date</label>
    <type>Date</type>
</CustomField>