force-app/main/default/objects/ABHI_Case_Detail__c/fields/IGMS_Source_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Source_of_Complaint__c</fullName>
    <description>IGMS Field</description>
    <label>IGMS Source of Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>E-mail</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Letter</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Web</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Fax</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Telephone</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Walk in</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>