force-app/main/default/objects/ABHI_Case_Detail__c/fields/IGMS_Type_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Type_of_Insurance__c</fullName>
    <label>IGMS Type of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>Health Insurance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>