force-app/main/default/objects/ABHI_Case_Detail__c/fields/IGMS_type_of_policy__c.field-meta.xml
<CustomField>
    <fullName>IGMS_type_of_policy__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>IGMS type of policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>