force-app/main/default/objects/ABHI_Case_Detail__c/fields/Incorrect_calories_related_concern__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_calories_related_concern__c</fullName>
    <label>Incorrect calories related concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect calories reflecting in active health app</fullName>
            </value>
            <value>
                <fullName>Lync and sync issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>