force-app/main/default/objects/ABHI_Case_Detail__c/fields/Intermediary_Name__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Name__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Intermediary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>