force-app/main/default/objects/ABHI_Case_Detail__c/fields/International_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>International_Contact_Number__c</fullName>
    <label>International Contact Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>