force-app/main/default/objects/ABHI_Case_Detail__c/fields/Intimation_Type__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Type__c</fullName>
    <defaultValue>&quot;Cashless&quot;</defaultValue>
    <label>Intimation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>