force-app/main/default/objects/ABHI_Case_Detail__c/fields/Inward_Number__c.field-meta.xml
<CustomField>
    <fullName>Inward_Number__c</fullName>
    <label>Inward Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>