force-app/main/default/objects/ABHI_Case_Detail__c/fields/Is_Complainant_Informed__c.field-meta.xml
<CustomField>
    <fullName>Is_Complainant_Informed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Complaints IGMS Field</description>
    <label>Is Complainant Informed ?</label>
    <type>Checkbox</type>
</CustomField>