force-app/main/default/objects/ABHI_Case_Detail__c/fields/Is_Complaint_Change_By_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Is_Complaint_Change_By_Insurer__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>Is Complaint Change By Insurer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>YES</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>