force-app/main/default/objects/ABHI_Case_Detail__c/fields/Is_Customer_Eligible_for_DHA__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Eligible_for_DHA__c</fullName>
    <label>Is Customer Eligible for DHA ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>