force-app/main/default/objects/ABHI_Case_Detail__c/fields/Is_document_available_and_shared_with_Cu__c.field-meta.xml
<CustomField>
    <fullName>Is_document_available_and_shared_with_Cu__c</fullName>
    <label>Document Available&amp;Shared with Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>