force-app/main/default/objects/ABHI_Case_Detail__c/fields/IS_Does_Not_Pertain__c.field-meta.xml
<CustomField>
    <fullName>IS_Does_Not_Pertain__c</fullName>
    <description>Complaints IGMS Field</description>
    <label>IS Does Not Pertain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>