force-app/main/default/objects/ABHI_Case_Detail__c/fields/Is_go_green_pitched__c.field-meta.xml
<CustomField>
    <fullName>Is_go_green_pitched__c</fullName>
    <label>Is go green pitched</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>