force-app/main/default/objects/ABHI_Case_Detail__c/fields/Is_Health_Heart_Score_generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Health_Heart_Score_generated__c</fullName>
    <label>Is Health Heart Score generated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>