force-app/main/default/objects/ABHI_Case_Detail__c/fields/Is_the_member_eligible_to_earn_health_re__c.field-meta.xml
<CustomField>
    <fullName>Is_the_member_eligible_to_earn_health_re__c</fullName>
    <label>Member eligible to earn health return?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>