force-app/main/default/objects/ABHI_Case_Detail__c/fields/Lead_Concern__c.field-meta.xml
<CustomField>
    <fullName>Lead_Concern__c</fullName>
    <label>Lead Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Cancer Secure</fullName>
            </value>
            <value>
                <fullName>Critical Illness</fullName>
            </value>
            <value>
                <fullName>Personal Accident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>