force-app/main/default/objects/ABHI_Case_Detail__c/fields/Letter_Pending_Document_Required__c.field-meta.xml
<CustomField>
    <fullName>Letter_Pending_Document_Required__c</fullName>
    <label>Letter Pending Document Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Query letter</fullName>
            </value>
            <value>
                <fullName>Approval letter</fullName>
            </value>
            <value>
                <fullName>settlement letter</fullName>
                <label>Settlement letter</label>
            </value>
            <value>
                <fullName>Denial letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>