force-app/main/default/objects/ABHI_Case_Detail__c/fields/Loan_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account_Number__c</fullName>
    <label>Loan Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>