force-app/main/default/objects/ABHI_Case_Detail__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>