force-app/main/default/objects/ABHI_Case_Detail__c/fields/Loan_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure__c</fullName>
    <label>Loan Tenure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>