force-app/main/default/objects/ABHI_Case_Detail__c/fields/Location_of_pathology__c.field-meta.xml
<CustomField>
    <fullName>Location_of_pathology__c</fullName>
    <label>Location of pathology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>