force-app/main/default/objects/ABHI_Case_Detail__c/fields/Medical_check_up_Concern__c.field-meta.xml
<CustomField>
    <fullName>Medical_check_up_Concern__c</fullName>
    <label>Medical check-up Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Assessment</fullName>
            </value>
            <value>
                <fullName>Annual Health Check-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>