force-app/main/default/objects/ABHI_Case_Detail__c/fields/Medical_Reason__c.field-meta.xml
<CustomField>
    <fullName>Medical_Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition of Pre-existing disease</fullName>
            </value>
            <value>
                <fullName>Deletion of Pre-existing disease</fullName>
            </value>
            <value>
                <fullName>Disclosure of Illness/Diseases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>