force-app/main/default/objects/ABHI_Case_Detail__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the appropriate member associated with the policy.</errorMessage>
        <filterItems>
            <field>Customer_Member_Mapping__c.Policy_Number__c</field>
            <operation>equals</operation>
            <valueField>$Source.Policy__c</valueField>
        </filterItems>
        <filterItems>
            <field>Customer_Member_Mapping__c.Policy_Number__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Member_Mapping__c</referenceTo>
    <relationshipLabel>ABHI Case Details</relationshipLabel>
    <relationshipName>ABHI_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>