force-app/main/default/objects/ABHI_Case_Detail__c/fields/Member_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Code__c</fullName>
    <label>Member Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>