force-app/main/default/objects/ABHI_Case_Detail__c/fields/Member_eligible_for_health_assess__c.field-meta.xml
<CustomField>
    <fullName>Member_eligible_for_health_assess__c</fullName>
    <label>Member eligible for health assessment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>