force-app/main/default/objects/ABHI_Case_Detail__c/fields/Member_Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Inception_Date__c</fullName>
    <label>Member Inception Date</label>
    <type>Date</type>
</CustomField>