force-app/main/default/objects/ABHI_Case_Detail__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>