force-app/main/default/objects/ABHI_Case_Detail__c/fields/MICR_Code__c.field-meta.xml
<CustomField>
    <fullName>MICR_Code__c</fullName>
    <label>MICR Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>