force-app/main/default/objects/ABHI_Case_Detail__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>