force-app/main/default/objects/ABHI_Case_Detail__c/fields/Mis_sale_Concern__c.field-meta.xml
<CustomField>
    <fullName>Mis_sale_Concern__c</fullName>
    <label>Mis-sale Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy issue without customer consent</fullName>
            </value>
            <value>
                <fullName>Agent/Sales person has asked for OTP, however, didn&apos;t inform policy will be issued</fullName>
            </value>
            <value>
                <fullName>Policy benefits available in documents are not the one informed by the agent (Miss Communication)</fullName>
            </value>
            <value>
                <fullName>Gift, freebies, Voucher, and Money-back were promised</fullName>
            </value>
            <value>
                <fullName>Incomplete information provided</fullName>
            </value>
            <value>
                <fullName>Ped disclosed but not added in policy</fullName>
            </value>
            <value>
                <fullName>Waiting period not informed</fullName>
            </value>
            <value>
                <fullName>New business policy issued instead of Port</fullName>
            </value>
            <value>
                <fullName>New business policy issued instead of renewal</fullName>
            </value>
            <value>
                <fullName>Forced to issue policy</fullName>
            </value>
            <value>
                <fullName>Free of cost</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>