force-app/main/default/objects/ABHI_Case_Detail__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>