force-app/main/default/objects/ABHI_Case_Detail__c/fields/Name_of_condition__c.field-meta.xml
<CustomField>
    <fullName>Name_of_condition__c</fullName>
    <label>Name of condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>