force-app/main/default/objects/ABHI_Case_Detail__c/fields/Nature_of_treatment__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_treatment__c</fullName>
    <label>Nature of treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Untreated</fullName>
            </value>
            <value>
                <fullName>Planned for surgery</fullName>
            </value>
            <value>
                <fullName>No treatment required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>