force-app/main/default/objects/ABHI_Case_Detail__c/fields/NCH_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>NCH_Complaint_Number__c</fullName>
    <label>NCH Complaint Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>