force-app/main/default/objects/ABHI_Case_Detail__c/fields/New_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>New_Address_Line_3__c</fullName>
    <label>New Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>