force-app/main/default/objects/ABHI_Case_Detail__c/fields/New_International_Address__c.field-meta.xml
<CustomField>
    <fullName>New_International_Address__c</fullName>
    <label>New International Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>