force-app/main/default/objects/ABHI_Case_Detail__c/fields/New_Nominee_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Nominee_Name__c</fullName>
    <label>New Nominee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>