force-app/main/default/objects/ABHI_Case_Detail__c/fields/New_Nominee_Relationship__c.field-meta.xml
<CustomField>
    <fullName>New_Nominee_Relationship__c</fullName>
    <label>New Nominee Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R001</fullName>
                <label>AUDITOR</label>
            </value>
            <value>
                <fullName>R002</fullName>
                <label>AUNT</label>
            </value>
            <value>
                <fullName>R003</fullName>
                <label>AUTHORIZED SIGNATORY</label>
            </value>
            <value>
                <fullName>R053</fullName>
                <label>BANKER</label>
            </value>
            <value>
                <fullName>R052</fullName>
                <label>BENEFICIARY OWNER</label>
            </value>
            <value>
                <fullName>R004</fullName>
                <label>BROTHER</label>
            </value>
            <value>
                <fullName>R005</fullName>
                <label>BROTHER IN-LAW</label>
            </value>
            <value>
                <fullName>R006</fullName>
                <label>CO-DIRECTOR</label>
            </value>
            <value>
                <fullName>R007</fullName>
                <label>CO-PARTNERS</label>
            </value>
            <value>
                <fullName>R008</fullName>
                <label>CONTACT PERSON</label>
            </value>
            <value>
                <fullName>R009</fullName>
                <label>COUSIN BROTHER</label>
            </value>
            <value>
                <fullName>R010</fullName>
                <label>COUSIN SISTER</label>
            </value>
            <value>
                <fullName>R011</fullName>
                <label>DAUGHTER IN-LAW</label>
            </value>
            <value>
                <fullName>R012</fullName>
                <label>DEPENDENT DAUGHTER</label>
            </value>
            <value>
                <fullName>R013</fullName>
                <label>DEPENDENT PARENT</label>
            </value>
            <value>
                <fullName>R014</fullName>
                <label>DEPENDENT SON</label>
            </value>
            <value>
                <fullName>R015</fullName>
                <label>DIRECTOR</label>
            </value>
            <value>
                <fullName>R017</fullName>
                <label>EMPLOYER-EMPLOYEE</label>
            </value>
            <value>
                <fullName>R018</fullName>
                <label>EXECUTOR</label>
            </value>
            <value>
                <fullName>R019</fullName>
                <label>FATHER</label>
            </value>
            <value>
                <fullName>R020</fullName>
                <label>FATHER-IN-LAW</label>
            </value>
            <value>
                <fullName>R025</fullName>
                <label>FRIEND</label>
            </value>
            <value>
                <fullName>R031</fullName>
                <label>GRAND FATHER (MATERNAL)</label>
            </value>
            <value>
                <fullName>R030</fullName>
                <label>GRAND MOTHER (MATERNAL)</label>
            </value>
            <value>
                <fullName>R014</fullName>
                <label>GRANDDAUGHTER</label>
            </value>
            <value>
                <fullName>R011</fullName>
                <label>GRANDFATHER</label>
            </value>
            <value>
                <fullName>R012</fullName>
                <label>GRANDMOTHER</label>
            </value>
            <value>
                <fullName>R013</fullName>
                <label>GRANDSON</label>
            </value>
            <value>
                <fullName>R043</fullName>
                <label>GUARANTOR</label>
            </value>
            <value>
                <fullName>R042</fullName>
                <label>HOLDING CO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>