force-app/main/default/objects/ABHI_Case_Detail__c/fields/Next_Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Integration_Name__c</fullName>
    <label>Next Integration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>